--- a/index.html
+++ b/index.html
@@ -431,24 +431,24 @@
                                 <p class="item-intro text-muted">Artificial Intelligence for Odor Management </p>
                                 <img class="img-fluid d-block mx-auto" src="assets/img/projects/iago/logo.png" alt="" />
                                 <p class="text-muted-justified">
-                                    This project was performed to diagnose and forecast high levels of hydrogen sulfide
-                                    (H2S), a poisonous, toxic, and dangerous gas, commonly emitted in oil refineries.
-                                    The main idea is provide these informations through a dashboard to support end-users
-                                    in their decision-making.
+                                    As a data scientist at ExACTa PUC-Rio, I executed a project focused on diagnosing and
+                                    forecasting high levels of hydrogen sulfide (H2S), a poisonous, toxic, and hazardous gas
+                                    commonly emitted in oil refineries. The main idea was to provide this crucial information
+                                    through a dashboard to support end-users in their decision-making.
                                 </p>
                                 <p class="text-muted-justified">
-                                    Firstly, we explored and analyzed data from refinery using statistical methods and
-                                    visualization techniques.
-                                    Through these analyses, we identified important correlations and insights with
-                                    meteorological data, such as both wind direction and speed, humidity and
-                                    temperature.
+                                    The project began with a thorough exploration and analysis of refinery historical data using
+                                    statistical methods and visualization techniques. Through these analyses, we uncovered significant
+                                    correlations and insights, particularly in conjunction with meteorological data, including wind
+                                    direction and speed, humidity, and temperature.
                                 </p>
                                 <img class="img-fluid d-block mx-auto" src="assets/img/projects/iago/visualization.png"
                                     alt="" />
                                 <p class="text-muted-justified">
-                                    Then, we developed a model using a machine learning technique to provide
-                                    prescriptive information about H2S emissions.
-                                    Our model return H2S levels based on a threshold defined by the end-users.
+                                    Then, we developed a decision tree model to provide prescriptive information regarding H2S emissions.
+                                    This machine learning model was deliberately chosen for its interpretability, allowing us to elucidate its
+                                    learning process and gain insights into its decision-making mechanisms. Our model was designed to generate H2S
+                                    level predictions based on a threshold defined by the end-users.
                                     <!-- In line with our work, \citet{Cadei2019} developed a real-time, end-to-end tool to monitor \ce{H2S} emissions in an oil and gas field, using machine-learning and data mining techniques to raise alarms and then provide prescriptive information. 
                                             Their solution also features a dedicated dashboard to monitor the risks of high \ce{H2S} levels and model performance. 
                                             It contains the following visualizations: 
@@ -459,11 +459,10 @@
 
                                 </p>
                                 <p class="text-muted-justified">
-                                    Finally, we chose Power BI to develop our dashboard.
-                                    The main visualization comprises a bar and a line chart that shows the predictions
-                                    of H2S emission rates.
-                                    We also presented “Cards” tab in our dashboard to show meteorological data and
-                                    possible causes for the H2S measurement in a given time.
+                                    Finally, to visualize and present our findings effectively, we selected Power BI as our platform
+                                    for dashboard development. The central visualization component featured a bar and line chart, illustrating
+                                    the predicted H2S emission rates. Additionally, we included a "Cards" tab within the dashboard to display
+                                    meteorological data and potential factors contributing to H2S measurements at a given time.
                                 </p>
                                 <img class="img-fluid d-block mx-auto" src="assets/img/projects/iago/interface.png"
                                     alt="" />
@@ -557,10 +556,17 @@
                                     <!-- <li>Repository: <a class="link" target="_blank" href="#"></a></li> -->
                                     <li>More information:
                                         <a class="link" target="_blank"
-                                            href="https://www.researchgate.net/project/Learning-Analytics-Studies">Papers,
-                                        </a>
+                                            href="https://doi.org/10.17771/PUCRio.acad.50335">Thesis</a>,
+                                        
                                         <a class="link" target="_blank"
-                                            href="https://doi.org/10.17771/PUCRio.acad.50335">Thesis</a>
+                                                href="https://www.researchgate.net/publication/328450693_VideoViz-Uma_proposta_de_ferramenta_de_visualizacao_de_logs_de_interacao_em_players_de_video">Paper 1</a>,
+                                        <a class="link" target="_blank"
+                                                href="https://www.researchgate.net/publication/335840207_What_the_Literature_and_Instructors_Say_about_the_Analysis_of_Student_Interaction_Logs_on_Virtual_Learning_Environments">Paper 2</a>,
+                                        <a class="link" target="_blank"
+                                                href="https://www.researchgate.net/publication/334341714_Visualizing_Student_Interactions_to_Support_Instructors_in_Virtual_Learning_Environments">Paper 3</a>,
+                                        <a class="link" target="_blank"
+                                                href="https://www.researchgate.net/publication/335840428_What_Can_Be_Found_from_Student_Interaction_Logs_of_Online_Courses_Offered_in_Brazil">Paper 4</a>
+                                        
                                     </li>
                                 </ul>
 
@@ -588,25 +594,25 @@
                                 <img class="img-fluid d-block mx-auto" src="assets/img/projects/similarity/logo.png"
                                     alt="" />
                                 <p class="text-muted-justified">
-                                    This project aimed to help prosecutor in finding legal text with similar context.
-                                    Therefore, we conducted analysis and exploration of data from <a class="link"
-                                        target="_blank" href='http://www.mprj.mp.br'>Public Prosecution</a> and <a
-                                        class="link" target="_blank" href='http://www.tjrj.jus.br'>Court of Law</a> from
-                                    Rio de Janeiro.
+                                    During my time as a data scientist at ECOA PUC-Rio, I initiated a project with the 
+                                    objective of assisting prosecutors in locating legal texts with similar contextual content. 
+                                    This project involved in-depth analysis and exploration of data obtained from both the  
+                                    <a class="link" target="_blank" href='http://www.mprj.mp.br'>Public Prosecution</a> and 
+                                    <a class="link" target="_blank" href='http://www.tjrj.jus.br'>Court of Law</a> from Rio de Janeiro.
                                 </p>
                                 <p class="text-muted-justified">
-                                    The documents provided on PDF files had their text extracted, and analyzed to
-                                    identify patterns.
-                                    We explored some approaches to build a vector representation of these documents and
-                                    we adopted a <a class="link" target="_blank"
-                                        href='http://nilc.icmc.usp.br/embeddings'>pre-trained model using word
-                                        embeddings</a> focused on text written in portuguese released by USP
-                                    (Universidade de São Paulo).
-                                    Then, to identify the text similarity, we calculate and sort by cosine distance
-                                    among vectors.
-                                    We deployed this service as an API rest.
+                                    The documents, mainly in PDF format, underwent a text extraction process, followed by a meticulous 
+                                    pattern identification and analysis. To construct a vector representation of these documents, 
+                                    we explored various methodologies and ultimately opted for a <a class="link" target="_blank" 
+                                    href='http://nilc.icmc.usp.br/embeddings'>pre-trained model using word embeddings</a> specifically 
+                                    designed for Portuguese text, developed by USP (Universidade de São Paulo). 
                                 </p>
-
+                                <p class="text-muted-justified">
+                                    To evaluate text similarity, we employed cosine distance calculations among the vectors and arranged 
+                                    the results accordingly. To enhance accessibility, we transformed this functionality into a RESTful API service, 
+                                    streamlining the process for our end-users. The outcome was a collection of legal texts sorted in ascending order
+                                     of cosine distance, making it easier to identify and access documents with similar contextual content.
+                                </p>
                                 <button class="btn btn-primary" data-dismiss="modal" type="button"><i
                                         class="fas fa-times mr-1"></i>Close Project</button>
                             </div>
@@ -633,17 +639,35 @@
                                 <img class="img-fluid d-block mx-auto" src="assets/img/projects/distribution/logo.png"
                                     alt="" />
                                 <p class="text-muted-justified">
-                                    I had the opportunity to work on a project that aimed to assist the 
-                                    <a class="link" target="_blank" href='http://www.mprj.mp.br'>Public Prosecution 
-                                    from Rio de Janeiro</a> in assigning the most suitable prosecutors to each case.
+                                    As a Data Scientist at ECOA PUC-Rio in 2018, I had the privilege of leading a significant 
+                                    project aimed at enhancing the operational efficiency of the <a class="link" target="_blank"
+                                    href='http://www.mprj.mp.br'>Public Prosecution from Rio de Janeiro</a>.
                                 </p>
                                 <p class="text-muted-justified">
-                                    Through statistical methods, we analyzed and explored data from both the Public 
-                                    Prosecution and <a class="link" target="_blank" href='http://www.tjrj.jus.br'>
-                                    Court of Law from Rio de Janeiro</a>. Our analysis allowed us to identify crucial 
-                                    correlations that were used to develop a machine learning model. This model helped 
-                                    match the most appropriate prosecutor to each case. We then deployed this service 
-                                    as an API rest.
+                                    The objective of this project was to optimize the allocation of prosecutors to individual legal cases,
+                                    ensuring that each case was assigned to the most suitable prosecutor. To achieve this, we embarked on a
+                                    comprehensive data-driven initiative.
+                                </p>
+                                <p class="text-muted-justified">
+                                    This project began by acquiring extensive historical lawsuit data, with a diverse array of metadata such 
+                                    as case type, cause, and origin. This dataset tracked the legal journey of lawsuits from the <a class="link"
+                                    target="_blank" href='http://www.tjrj.jus.br'> Court of Law from Rio de Janeiro</a> to the Public Prosecution.
+                                    To prepare this data for analysis, we meticulously executed a data cleansing process, which proved to be a 
+                                    labor-intensive yet indispensable phase of the project.
+                                </p>
+                                <p class="text-muted-justified">
+                                    Through statistical methods, we unearthed critical correlations within the dataset. These correlations were 
+                                    instrumental in the development of a robust decision tree model to automate the task of matching the most
+                                    appropriate prosecutor to each lawsuit. This machine learning model was deliberately chosen for its
+                                    interpretability, allowing us to elucidate its learning process and gain insights into its decision-making
+                                    mechanisms.
+                                </p>
+                                <p class="text-muted-justified">
+                                    We operationalized our model by deploying it as a RESTful API service. By doing so, we enabled seamless 
+                                    integration into the existing workflow of the Public Prosecution, allowing them to input relevant case 
+                                    features and receive instant recommendations for the most suitable prosecutor. This project not only 
+                                    streamlined the allocation process but also improved the efficiency of the Public Prosecution from 
+                                    Rio de Janeiro.
                                 </p>
 
                                 <button class="btn btn-primary" data-dismiss="modal" type="button"><i
@@ -753,10 +777,27 @@
                                 </p>
 
                                 <ul class="list-inline">
-                                    <li>More information: <a class="link" target="_blank"
-                                            href="https://www.researchgate.net/project/Grupo-de-Trabalho-de-Videos-como-Objetos-de-Aprendizagem-GT-VoA">Papers</a>
+                                    <li>More information:
+                                        <a class="link" target="_blank"
+                                            href="https://www.researchgate.net/publication/300116097_Cacuria_Uma_Ferramenta_de_Autoria_Multimidia_para_Objetos_de_Aprendizagem">Paper 1</a>,
+                                        <a class="link" target="_blank"
+                                            href="https://www.researchgate.net/publication/270582790_Cacuria_Authoring_Tool_for_Multimedia_Learning_Objects">Paper 2</a>,
+                                        <a class="link" target="_blank"
+                                            href="https://www.researchgate.net/publication/309758942_SceneSync_A_Hypermedia_Authoring_Language_for_Temporal_Synchronism_of_Learning_Objects">Paper 3</a>,
+                                        <a class="link" target="_blank"
+                                            href="https://www.researchgate.net/publication/317174982_Integrating_Participatory_and_Interaction_Design_of_an_Authoring_Tool_for_Learning_Objects_Involving_a_Multidisciplinary_Team">Paper 4</a>,
+                                        <a class="link" target="_blank"
+                                            href="https://www.researchgate.net/publication/318133430_Lessons_Learned_from_Evaluating_an_Authoring_Tool_for_Learning_Objects">Paper 5</a>,
+                                        <a class="link" target="_blank"
+                                            href="https://www.researchgate.net/publication/317989400_A_Hypervideo_Model_for_Learning_Objects">Paper 6</a>,
+                                        <a class="link" target="_blank"
+                                            href="https://www.researchgate.net/publication/320391284_Creating_Multimedia_Learning_Objects">Paper 7</a>,
+                                        <a class="link" target="_blank"
+                                            href="https://www.researchgate.net/publication/320456202_Creating_Multimedia_Learning_Objects">Paper 8</a>,
+                                        <a class="link" target="_blank"
+                                            href="https://www.researchgate.net/publication/339621651_Authoring_Hypervideos_Learning_Objects">Paper 9</a>
                                     </li>
-                                    <li>Sample of content built using Cacuriá:
+                                    <!-- <li>Sample of content built using Cacuriá:
                                         <a class="link" target="_blank"
                                             href="http://200.130.99.114/OA_Abelhas/">Bees</a>,
                                         <a class="link" target="_blank"
@@ -769,7 +810,7 @@
                                             href="http://200.130.99.114/OA_Metodologia/">Research Methodology</a>,
                                         <a class="link" target="_blank"
                                             href="http://200.130.99.114/OA_Algoritmo/">Sorting Algorithms</a>.
-                                    </li>
+                                    </li> -->
                                 </ul>
                                 <button class="btn btn-primary" data-dismiss="modal" type="button"><i
                                         class="fas fa-times mr-1"></i>Close Project</button>
